Fixed bug causing page margin to cause scrollbar to appear.

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,5 +13,7 @@
 html, body {
   min-height: 100vh;
   width: 100%;
+  margin: 0;
+  padding: 0;
   font-family: 'Roboto', Arial, sans-serif;
 }
